# Scaler_Energy-Manager

./: dataset_raw.jsonl
Scaler_hackathon/: .dockerignore  .env.example  .gitignore  AUDIT_FIXES_COMPLETE.txt  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  Blog.md  COAL_FIX_SUMMARY.md  CODE_REVIEW.md  Client.py  Dockerfile  ENV_DESIGN.md  EXECUTIVE_SUMMARY.md  EXPLOIT_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  README_AUDIT.md  SECURITY_AND_REALISM_AUDIT.md  SECURITY_QUICK_REF.md  SUBMISSION_CHECKLIST.md  VALIDATION_COMPLETE.txt  VULNERABILITY_DATABASE.md  __init__.py  base_scores.json  client.py  compare_models.py  data_filtering.py  data_generation.py  dataset_clean.jsonl  dataset_raw.jsonl  energy_grid_complete_pipeline.ipynb  energy_grid_grpo_training.ipynb  inference.py  lora_scores.json  models.py  openenv.yaml  package-lock.json  prompts_backup.txt  push_output.txt  pyproject.toml  (+3 more)
Scaler_hackathon/.venv311/: pyvenv.cfg
Scaler_hackathon/agent-grid-view/: tailwind.config.ts
Scaler_hackathon/energy_grid_openenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Scaler_hackathon/lora_energy_grid/: README.md  adapter_config.json  tokenizer.json
Scaler_hackathon/scratch/: clean_all_emojis.py  clean_encoding.py  test_llm.py
Scaler_hackathon/scripts/: validate-submission.sh
Scaler_hackathon/server/: Dockerfile  Scaler_hackathon_environment.py  __init__.py  app.py  baseline.py  buffer.py  energy_grid_environment.py  grader.py  llm_adapter.py  normalization.py  ppo_agent.py  requirements.txt  simulator.py  tasks.py  train.py
(+19 files in other folders)
