[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-grid-openenv"
version = "0.1.0"
description = "Realistic national electricity grid simulation environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv runtime
    "openenv-core[core]>=0.2.1",

    # FastAPI server & ASGI runtime
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",

    # Simulation & numerics
    "numpy>=1.26.0",

    # LLM baseline (OpenAI-compatible client — works with Groq)
    "openai>=1.30.0",

    # Environment variable loading (.env file support — cross-platform)
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",       # for async test client
]

[project.scripts]
# Server entry point
server = "server.app:main"

[tool.setuptools]
include-package-data = true
py-modules = ["client", "models", "inference"]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]